--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   coreutils-0.0.30.tar.gz: 969753c806e77bc900919411f09f0dc354eb202d
+  vendor.tar.xz: 78c234d931eeff353da982a1c41ea9c219521ac5
